# divkit

./: patch_rust.py  patch_rust_defaults.py  test_rust_gen.py
api_generator/api_generator/: config.py
api_generator/api_generator/generators/rust/: generator.py  rust_entities.py  utils.py
api_generator/api_generator/schema/modeling/: entities.py
api_generator/tests/: test_api_generator.py
api_generator/tests/configs/: rust_config.json  rust_template_config.json
api_generator/tests/references/rust/: entity.rs  entitywitharray.rs  entitywitharrayofenums.rs  entitywitharrayofexpressions.rs  entitywitharrayofnesteditems.rs  entitywitharraywithtransform.rs  entitywithcomplexproperty.rs  entitywithcomplexpropertywithdefaultvalue.rs  entitywithentityproperty.rs  entitywithjsonproperty.rs  entitywithoptionalcomplexproperty.rs  entitywithoptionalproperty.rs  entitywithoptionalstringenumproperty.rs  entitywithoutproperties.rs  entitywithpropertywithdefaultvalue.rs  entitywithrawarray.rs  entitywithrequiredproperty.rs  entitywithsimpleproperties.rs  entitywithstringarrayproperty.rs  entitywithstringenumproperty.rs  withdefault.rs  (+3 more)
docs/: SDUI_DOMAIN_MODELING.md  STATIC_SDUI_DOMAIN_MODELING.md  divkit_flutter_architecture.md  generate_diagram.py  rust_backend_architecture.md  sdui_class_diagram.md  sdui_dependency_graph.md  static_sdui_class_diagram.md  static_sdui_dependency_graph.md
json-builder/rust/: Cargo.toml  codegen.sh  fix_mod.py  generator-config.json
json-builder/rust/src/: lib.rs  types.rs
json-builder/rust/tests/: test_builder.rs  test_json_match.rs
